--- a/index.html
+++ b/index.html
@@ -563,6 +563,57 @@ document.querySelectorAll('.gallery-content img').forEach(img => {
     e.stopPropagation();
     zoomImg.src = img.src;
     zoomCaption.textContent = img.alt || "";
+<!-- SCRIPTS -->
+<script>
+// --- Apertura e chiusura delle gallerie principali ---
+function openGallery(id) {
+  document.getElementById(id).classList.add('active');
+}
+
+function closeAllGalleries() {
+  document.querySelectorAll('.gallery-overlay').forEach(g => g.classList.remove('active'));
+}
+
+document.querySelectorAll('.close-gallery').forEach(btn => {
+  btn.addEventListener('click', closeAllGalleries);
+});
+
+document.querySelector('.open-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('gallery');
+});
+document.querySelector('.open-fx-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('fx-gallery');
+});
+document.querySelector('.open-circus-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('circus-gallery');
+});
+
+// --- Overlay zoom immagine ---
+const zoomOverlay = document.createElement('div');
+zoomOverlay.classList.add('zoom-overlay');
+zoomOverlay.innerHTML = `
+  <div class="zoom-content">
+    <span class="close-zoom">&times;</span>
+    <img src="" alt="">
+    <p class="zoom-caption"></p>
+  </div>
+`;
+document.body.appendChild(zoomOverlay);
+
+const zoomImg = zoomOverlay.querySelector('img');
+const zoomCaption = zoomOverlay.querySelector('.zoom-caption');
+const closeZoom = zoomOverlay.querySelector('.close-zoom');
+
+// --- Click su immagine dentro la galleria ---
+document.querySelectorAll('.gallery-content img').forEach(img => {
+  img.style.cursor = 'zoom-in';
+  img.addEventListener('click', e => {
+    e.stopPropagation();
+    zoomImg.src = img.src;
+    zoomCaption.textContent = img.alt || "";
     zoomOverlay.classList.add('active');
   });
 });
@@ -570,7 +621,10 @@ document.querySelectorAll('.gallery-content img').forEach(img => {
 // --- Chiusura zoom cliccando fuori o con X ---
 zoomOverlay.addEventListener('click', e => {
   if (e.target === zoomOverlay || e.target === closeZoom) {
-    zoomOverlay.classList.remove('active');
+    zoomOverlay.classList.add('fade-out');
+    setTimeout(() => {
+      zoomOverlay.classList.remove('active', 'fade-out');
+    }, 300);
   }
 });
 </script>
@@ -648,6 +702,15 @@ zoomOverlay.addEventListener('click', e => {
 @keyframes zoomIn {
   from {transform: scale(0.8); opacity: 0;}
   to {transform: scale(1); opacity: 1;}
+}
+
+.zoom-overlay.fade-out {
+  animation: fadeOut 0.3s ease forwards;
+}
+
+@keyframes fadeOut {
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
 </style>
 
