--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="it">
 <head>
 <meta charset="utf-8" />
@@ -512,8 +512,6 @@ document.querySelector('.open-circus-gallery').addEventListener('click', e => {
     
   <!-- SCRIPTS -->
 <script>
-<!-- SCRIPTS -->
-<script>
 // --- Apertura e chiusura delle gallerie principali ---
 function openGallery(id) {
   document.getElementById(id).classList.add('active');
@@ -540,56 +538,6 @@ document.querySelector('.open-circus-gallery').addEventListener('click', e => {
   openGallery('circus-gallery');
 });
 
-// --- Overlay zoom immagine ---
-const zoomOverlay = document.createElement('div');
-zoomOverlay.classList.add('zoom-overlay');
-zoomOverlay.innerHTML = `
-  <div class="zoom-content">
-    <span class="close-zoom">&times;</span>
-    <img src="" alt="">
-    <p class="zoom-caption"></p>
-  </div>
-`;
-document.body.appendChild(zoomOverlay);
-
-const zoomImg = zoomOverlay.querySelector('img');
-const zoomCaption = zoomOverlay.querySelector('.zoom-caption');
-const closeZoom = zoomOverlay.querySelector('.close-zoom');
-
-// --- Click su immagine dentro la galleria ---
-document.querySelectorAll('.gallery-content img').forEach(img => {
-  img.style.cursor = 'zoom-in';
-  img.addEventListener('click', e => {
-    e.stopPropagation();
-    zoomImg.src = img.src;
-    zoomCaption.textContent = img.alt || "";
-<!-- SCRIPTS -->
-<script>
-// --- Apertura e chiusura delle gallerie principali ---
-function openGallery(id) {
-  document.getElementById(id).classList.add('active');
-}
-
-function closeAllGalleries() {
-  document.querySelectorAll('.gallery-overlay').forEach(g => g.classList.remove('active'));
-}
-
-document.querySelectorAll('.close-gallery').forEach(btn => {
-  btn.addEventListener('click', closeAllGalleries);
-});
-
-document.querySelector('.open-gallery').addEventListener('click', e => {
-  e.preventDefault();
-  openGallery('gallery');
-});
-document.querySelector('.open-fx-gallery').addEventListener('click', e => {
-  e.preventDefault();
-  openGallery('fx-gallery');
-});
-document.querySelector('.open-circus-gallery').addEventListener('click', e => {
-  e.preventDefault();
-  openGallery('circus-gallery');
-});
 
 // --- Overlay zoom immagine ---
 const zoomOverlay = document.createElement('div');
@@ -621,83 +569,7 @@ document.querySelectorAll('.gallery-content img').forEach(img => {
 // --- Chiusura zoom cliccando fuori o con X ---
 zoomOverlay.addEventListener('click', e => {
   if (e.target === zoomOverlay || e.target === closeZoom) {
-    zoomOverlay.classList.add('fade-out');
-    setTimeout(() => {
-      zoomOverlay.classList.remove('active', 'fade-out');
-    }, 300);
-  }
-});
-</script>
-
-<style>
-/* --- OVERLAY ZOOM --- */
-.zoom-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.92);
-  display: none;
-<!-- SCRIPTS -->
-<script>
-// --- Apertura e chiusura delle gallerie principali ---
-function openGallery(id) {
-  document.getElementById(id).classList.add('active');
-}
-
-function closeAllGalleries() {
-  document.querySelectorAll('.gallery-overlay').forEach(g => g.classList.remove('active'));
-}
-
-document.querySelectorAll('.close-gallery').forEach(btn => {
-  btn.addEventListener('click', closeAllGalleries);
-});
-
-document.querySelector('.open-gallery').addEventListener('click', e => {
-  e.preventDefault();
-  openGallery('gallery');
-});
-document.querySelector('.open-fx-gallery').addEventListener('click', e => {
-  e.preventDefault();
-  openGallery('fx-gallery');
-});
-document.querySelector('.open-circus-gallery').addEventListener('click', e => {
-  e.preventDefault();
-  openGallery('circus-gallery');
-});
-
-// --- Overlay zoom immagine ---
-const zoomOverlay = document.createElement('div');
-zoomOverlay.classList.add('zoom-overlay');
-zoomOverlay.innerHTML = `
-  <div class="zoom-content">
-    <span class="close-zoom">&times;</span>
-    <img src="" alt="">
-    <p class="zoom-caption"></p>
-  </div>
-`;
-document.body.appendChild(zoomOverlay);
-
-const zoomImg = zoomOverlay.querySelector('img');
-const zoomCaption = zoomOverlay.querySelector('.zoom-caption');
-const closeZoom = zoomOverlay.querySelector('.close-zoom');
-
-// --- Click su immagine dentro la galleria ---
-document.querySelectorAll('.gallery-content img').forEach(img => {
-  img.style.cursor = 'zoom-in';
-  img.addEventListener('click', e => {
-    e.stopPropagation();
-    zoomImg.src = img.src;
-    zoomCaption.textContent = img.alt || "";
-    zoomOverlay.classList.add('active');
-  });
-});
-
-// --- Chiusura zoom cliccando fuori o con X ---
-zoomOverlay.addEventListener('click', e => {
-  if (e.target === zoomOverlay || e.target === closeZoom) {
-    zoomOverlay.classList.add('fade-out');
-    setTimeout(() => {
-      zoomOverlay.classList.remove('active', 'fade-out');
-    }, 300);
+    zoomOverlay.classList.remove('active');
   }
 });
 </script>
@@ -729,7 +601,7 @@ zoomOverlay.addEventListener('click', e => {
   max-width: 90%;
   max-height: 80vh;
   border-radius: 10px;
-  box-shadow: 0 0 40px rgba(178,102,255,0.9), 0 0 80px rgba(224,179,255,0.6);
+  box-shadow: 0 0 40px rgba(178,102,255,0.7);
   animation: zoomIn 0.4s ease;
 }
 
@@ -773,19 +645,4 @@ zoomOverlay.addEventListener('click', e => {
 }
 
 @keyframes zoomIn {
-  from {transform: scale(0.8); opacity: 0;}
-  to {transform: scale(1); opacity: 1;}
-}
-
-.zoom-overlay.fade-out {
-  animation: fadeOut 0.3s ease forwards;
-}
-
-@keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-</style>
-
-</body>
-</html>
+  from {transform: scale(0.8); opacity: 0;
