--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
   <!DOCTYPE html>
 <html lang="it">
 <head>
+  <meta name="description" content="ShowBiz One - Servizi per lo spettacolo, eventi, dinner show e performance artistiche. Trasformiamo eventi in esperienze indimenticabili.">
+<meta name="keywords" content="showbizone, spettacoli, eventi, dinner show, performer, luci, suoni, effetti speciali">
+<meta name="robots" content="index, follow">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ShowBiz One | Servizi per lo Spettacolo</title>
