--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
 <html lang="it">
 <head>
+  <meta name="google-site-verification" content="EnNnoxgE7tYm5Gmtmrv-rF7qP68eARMDYAlnbuHPml4" />
   <meta name="description" content="ShowBiz One - Servizi per lo spettacolo, eventi, dinner show e performance artistiche. Trasformiamo eventi in esperienze indimenticabili.">
 <meta name="keywords" content="showbizone, spettacoli, eventi, dinner show, performer, luci, suoni, effetti speciali">
 <meta name="robots" content="index, follow">
