--- a/index.html
+++ b/index.html
@@ -1,6 +1,53 @@
   <!DOCTYPE html>
 <html lang="it">
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- 🔹 SEO Base -->
+  <title>ShowBizOne | Entertainment & Special Effects per Eventi Straordinari</title>
+  <meta name="description" content="ShowBizOne trasforma eventi in esperienze straordinarie. Entertainment, Dinner Show, Circus Show, effetti speciali e spettacoli su misura per ogni occasione.">
+  <meta name="keywords" content="ShowBizOne, spettacoli, eventi, dinner show, effetti speciali, artisti, performer, luci, audio, video, intrattenimento, circus show, entertainment">
+  <meta name="author" content="ShowBizOne Team">
+  <meta name="theme-color" content="#0a0a0a">
+
+  <!-- 🔹 Open Graph / Social Preview -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.showbizone.it/">
+  <meta property="og:title" content="ShowBizOne | Entertainment & Special Effects">
+  <meta property="og:description" content="Trasformiamo eventi in esperienze indimenticabili — spettacoli, effetti speciali e show di classe internazionale.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_00000000912071fdbb7eaad535f35e54.png">
+
+  <!-- 🔹 Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ShowBizOne | Entertainment & Special Effects">
+  <meta name="twitter:description" content="Eventi, spettacoli e effetti speciali per un intrattenimento d'eccellenza.">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_00000000912071fdbb7eaad535f35e54.png">
+
+  <!-- 🔹 Favicon (opzionale, se vuoi aggiungerne una personalizzata) -->
+  <link rel="icon" href="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_00000000912071fdbb7eaad535f35e54.png" type="image/png">
+
+  <!-- 🔹 Font e Stili -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800&display=swap" rel="stylesheet">
+
+  <!-- 🔹 Schema Markup (dati strutturati per Google) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "ShowBizOne",
+    "url": "https://www.showbizone.it/",
+    "logo": "https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_00000000912071fdbb7eaad535f35e54.png",
+    "sameAs": [
+      "https://www.instagram.com/showbizone.entertainment"
+    ],
+    "description": "Entertainment, Dinner Show, Circus Show e Special Effects per eventi di classe.",
+    "founder": "ShowBizOne Entertainment Team"
+  }
+  </script>
+</head>
   <meta name="google-site-verification" content="EnNnoxgE7tYm5Gmtmrv-rF7qP68eARMDYAlnbuHPml4" />
   <meta name="description" content="ShowBiz One - Creiamo spettacoli, eventi e performance uniche. La nostra missione? Far vivere emozioni.">
 <meta name="keywords" content="showbizone, spettacoli, eventi, dinner show, performer, luci, suoni, effetti speciali">
@@ -320,40 +367,7 @@ img{max-width:100%;display:block}
   gap: 10px;
   font-size: 1.2rem;
   font-weight: 600;
-  color: var(--violet);
-  text-decoration: none;
-  transition: transform 0.2s ease, color 0.2s ease;
-}
 
-.instagram-link:hover {
-  color: var(--violet2);
-  transform: scale(1.05);
-}
-
-.instagram-icon {
-  width: 26px;
-  height: 26px;
-  border-radius: 6px;
-  filter: drop-shadow(0 0 6px rgba(178,102,255,0.6));
-  transition: transform 0.2s ease;
-}
-
-.instagram-link:hover .instagram-icon {
-  transform: scale(1.15);
-}
-  .gallery-content img {
-  cursor: zoom-in;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.gallery-content img.zoomed {
-  transform: scale(1.6); /* ingrandimento */
-  z-index: 1000;
-  box-shadow: 0 0 40px rgba(178,102,255,0.5);
-  cursor: zoom-out;
-}
-</style>
-</head>
 <!-- HERO -->
 <header class="hero">
   <div class="wrap">
