--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
         <!DOCTYPE html>
 <html lang="it">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3F8YZLKCKS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3F8YZLKCKS');
+</script>
 <head>
   <meta name="google-site-verification" content="EnNnoxgE7tYm5Gmtmrv-rF7qP68eARMDYAlnbuHPml4" />
   <meta name="description" content="ShowBiz One - Creiamo spettacoli, eventi e performance uniche. La nostra missione? Far vivere emozioni.">
