--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ img{max-width:100%;display:block}
 <div class="gallery-overlay" id="fx-gallery">
   <span class="close-gallery">&times;</span>
   <div class="gallery-content">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/fx1.jpg" alt="Effetti Speciali 1">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_0000000028d871f4bfd502ad723d08cf.png" alt="Effetti Speciali 1">
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/fx2.jpg" alt="Effetti Speciali 2">
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/fx3.jpg" alt="Effetti Speciali 3">
   </div>
