--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ img{max-width:100%;display:block}
   <span class="close-gallery">&times;</span>
   <div class="gallery-content">
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_0000000028d871f4bfd502ad723d08cf.png" alt="Fontane Fredde Sparkular">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/fx2.jpg" alt="Effetti Speciali 2">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_000000006dac7246a797fa56768f22ef.png" alt="Fontane Fredde,Fumo basso,Neon">
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/fx3.jpg" alt="Effetti Speciali 3">
   </div>
 </div>
