--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   gtag('config', 'G-3F8YZLKCKS');
 </script>
 <head>
+<script src="https://www.paypal.com/sdk/js?client-id=BAAEB_ygEnSQr2L_10TlwaFAPjA23QbtXcuT8T1754Rs88q7Bwd_36JFdSuEPNRVqMZVzwICCG4YHd-ZCA&components=hosted-buttons&disable-funding=venmo&currency=EUR">
+ </script>
   <meta name="google-site-verification" content="EnNnoxgE7tYm5Gmtmrv-rF7qP68eARMDYAlnbuHPml4" />
   <meta name="description" content="ShowBiz One - Creiamo spettacoli, eventi e performance uniche. La nostra missione? Far vivere emozioni.">
 <meta name="keywords" content="showbizone, spettacoli, eventi, dinner show, performer, luci, suoni, effetti speciali">
@@ -440,6 +442,12 @@ img{max-width:100%;display:block}
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0032.jpg" alt="Stephany">
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0036.jpg" alt="Stephany">
   </div>
+        <div id="paypal-container-3GGDBBV7CQ7QA"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "3GGDBBV7CQ7QA",
+  }).render("#paypal-container-3GGDBBV7CQ7QA")
+</script>
 </div>
 <!-- SERVICE AUDIO/LUCI/VIDEO -->
 <section class="section" id="service">
